# libbson

./: .gitignore  .mci.yml  libbson.modulemap
src/bindings/: Makefile.am
src/bindings/glib/: Makefile.am  bson-glib.c  bson-glib.h
src/bson/: bson-config.h  bson-macros.h  bson-types.h  bson-version.h  bson.h
